[metadata]
# replace with your username:
name = eos_amqp_client
version = 0.0.1
author = Amo DelBello
author_email = adelbello@meowwolf.com
description = An amqp client written in python to be used by other EOS software components
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MeowWolf/
project_urls =
    Bug Tracker = https://github.com/MeowWolf/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src